# scripts

./: .gitignore  Makefile  README.md  go.mod  main.go  meson.build
.github/workflows/: ci.yml  release.yml
cmd/scripty/: main.go
internal/executor/: executor.go
internal/tui/: tui.go
scripts/: fix-path.py  txt2md.py
scripts/scripts/: fix-path.sh  txt2md.py
